add meeting changes
